examples/test/testpolicy19017.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19017
  namespace: namespace77
spec:
  podSelector:
    matchLabels:
      key23: value24
      key40: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value19
          key27: value17
          key30: value47
      podSelector:
        matchLabels:
          key44: value8
